# ref_iter

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
compile_fail/: mod.rs
macros/: Cargo.toml  README.md
macros/src/: for_ref_mut_impl.rs  lib.rs
macros/src/ra_macro_util/: errors.rs  mod.rs  parser.rs  with_error.rs
macros/src/raf_macro_util/: errors.rs  mod.rs  parser.rs  with_error.rs
macros/src/syn_node/: for_ref.rs  mod.rs
macros/src/tree/: for_ref.rs  for_ref_kind.rs  mod.rs
macros/src/util/: mod.rs  scan_result.rs  translate.rs
macros/src/util/ra_friendly/: errors.rs  mod.rs  parser.rs  soft_result.rs  with_error.rs
ref_iter/: Cargo.toml  LICENSE-APACHE
ref_iter/compile_fail/: mod.rs
ref_iter/src/: lib.rs  macros.rs
ref_iter/src/closure/: mod.rs
ref_iter/src/sub/: ref_map.rs
ref_iter/src/traits/: ref_iterator.rs  ref_mut_iterator.rs
ref_iter/src/util/: lifetime.rs  mod.rs
ref_iter_macro/: Cargo.toml  README.md
ref_iter_macro/src/: for_ref_impl.rs  for_tree.rs
ref_iter_macro/src/util/: mod.rs  parse_buffer_ext.rs
src/: into_ref_iterator.rs  lib.rs  macros.rs  prelude.rs  ref_item.rs  ref_iterator.rs  ref_token.rs  token.rs
src/closure/: fn_map.rs  fn_mut.rs  mod.rs
src/closures/: fn_flat_map.rs  fn_iflat_map.rs  mod.rs
src/iter/: mod.rs  ref_iter.rs  ref_iter_i.rs  ref_mut_iter.rs  ref_mut_iter_i.rs
src/macros/: import.rs  mod.rs  private.rs
src/sub/: as_ref_iter.rs  icloned.rs  iconv.rs  iconv_mut.rs  iflat_map.rs  imap.rs  into_ref_iter.rs  kv_iconv.rs  kv_iconv_mut.rs  kv_imap.rs  mod.rs  ref_cloned.rs  ref_flat_map.rs  ref_kv_map.rs  ref_map.rs  ref_mut_kv_map.rs  ref_mut_map.rs
src/traits/: exact_size_ref_iterator.rs  into_ref_iterator.rs  into_ref_kv_iterator.rs  into_ref_mut_iterator.rs  into_ref_mut_kv_iterator.rs  mod.rs  ref_iterator.rs  ref_iterator_base.rs  ref_kv_iterator.rs  ref_mut_iterator.rs  ref_mut_kv_iterator.rs
src/types/: into_ref_iter.rs  into_ref_mut_iter.rs  mod.rs  ref_iter.rs  ref_iter_i.rs  ref_mut_iter.rs  ref_mut_iter_i.rs
src/types/dynamic/: dyn_ref_iter.rs  dyn_ref_mut_iter.rs  mod.rs
src/util/: dbg_fmt.rs  lt.rs  mod.rs
tests/: macros.rs  test.rs
tests_compile_fail/: mod.rs
