[workspace]
members = ["macros"]

[workspace.package]
authors = ["Nossie531"]
edition = "2021"
repository = "https://github.com/nossie531/ref_iter"
license = "MIT OR Apache-2.0"

[package]
name = "ref_iter"
version = "0.1.1"
description = "Dynamic borrowing iterator."
keywords = ["Ref", "RefMut", "RefCell", "Iterator"]
categories = ["no-std", "rust-patterns"]
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ref_iter_macro = { version = "=0.1.1", path = "macros" }

[features]
default = ["alloc"]
alloc = []
