[package]
name = "ref_iter_macro"
version = "0.2.0"
description = "Macros for 'ref_iter'."
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
